# production-grade-tabular-rag

./: .gitignore  00-eda.ipynb  01-tabular semantic search superlinked.ipynb  Makefile  README.md  pyproject.toml
superlinked_app/: config.py  constants.py  data_processing.py  index.py  query.py  utils.py
tools/: download_and_process.py
